--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,32 @@
 [package]
 name = "synchronized"
-version = "0.1.0"
+version = "1.0.0"
+authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
+repository = "https://github.com/clucompany/synchronized.git"
 edition = "2021"
 
+license = "Apache-2.0"
+readme = "README.md"
+
+description = "Convenient and simple macro for code synchronization in multithreading."
+
+# docs.rs-specific configuration
+[package.metadata.docs.rs]
+# document all features
+all-features = true
+# defines the configuration attribute `docsrs`
+rustdoc-args = ["--cfg", "docsrs"]
+
+[features]
+default = ["std", "get_point_name"]
+# Ability to get the name of the synchronization point.
+get_point_name = []
+# Use synchronization primitives from `std`. Note that is_lock is not supported in it.
+#
+# Note that you can just use `parking_lot` instead of `std`.
+std = []
+
 [dependencies]
-parking_lot = "0.12.0"
+# Choose between `std` or `parking_lot` as the default synchronization primitive.
+parking_lot = {version = "0.12.1", optional = true}
+
