1. The library version has been raised to 1.0.2. 2. Added feature `point` to enable or disable `synchonized_macro` from assembly. 3. Build.rs has been corrected.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,7 +35,6 @@ jobs:
     - name: Run cargo alltest
       run: cargo test --all-features --verbose
     - name: Std
-      run: cargo test --no-default-features --features std,get_point_name --lib --verbose
+      run: cargo test --no-default-features --features std,point,get_point_name --lib --verbose
     - name: PL
-      run: cargo test --no-default-features --features parking_lot,get_point_name --lib --verbose
-
+      run: cargo test --no-default-features --features parking_lot,point,get_point_name --lib --verbose
