--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "synchronized"
-version = "1.0.1"
+version = "1.0.2"
 authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
 repository = "https://github.com/clucompany/synchronized.git"
 edition = "2021"
+build = "build.rs"
 
 license = "Apache-2.0"
 readme = "README.md"
@@ -23,12 +24,13 @@ rustdoc-args = ["--cfg", "docsrs"]
 default = ["std", "get_point_name"]
 # Ability to get the name of the synchronization point.
 get_point_name = []
+# Adds or removes support for the `synchronized_point` macro.
+point = []
 # Use synchronization primitives from `std`. Note that is_lock is not supported in it.
 #
 # Note that you can just use `parking_lot` instead of `std`.
 std = []
 
 [dependencies]
-# Choose between `std` or `parking_lot` as 
-# the default synchronization primitive.
+# The synchronization primitive is implemented using the `parking_lot` library.
 parking_lot =	{ version = "0.12.1", optional = true }
