--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,6 +35,8 @@ jobs:
     - name: Run cargo alltest
       run: cargo test --all-features --verbose
     - name: Std
-      run: cargo test --no-default-features --features std,point,get_point_name --lib --verbose
+      run: cargo test --no-default-features --features std,point,get_point_name --lib --verbose --examples
     - name: PL
-      run: cargo test --no-default-features --features parking_lot,point,get_point_name --lib --verbose
+      run: cargo test --no-default-features --features parking_lot,point,get_point_name --lib --verbose --examples
+    - name: ASYNC(TOKIO+PL)
+      run: cargo test --no-default-features --features async,point,get_point_name --lib --verbose --tests
