--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "synchronized"
-version = "1.0.2"
+version = "1.0.3"
 authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
 repository = "https://github.com/clucompany/synchronized.git"
 edition = "2021"
@@ -21,7 +21,7 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-default = ["std", "get_point_name"]
+default = ["std", "point", "get_point_name"]
 # Ability to get the name of the synchronization point.
 get_point_name = []
 # Adds or removes support for the `synchronized_point` macro.
@@ -31,6 +31,14 @@ point = []
 # Note that you can just use `parking_lot` instead of `std`.
 std = []
 
+# The synchronization primitive is implemented using the `tokio`+`parking_lot` 
+# library for an asynchronous environment.
+async = ["tokio", "async-trait"]
+
 [dependencies]
 # The synchronization primitive is implemented using the `parking_lot` library.
 parking_lot =	{ version = "0.12.1", optional = true }
+
+# The synchronization primitive is implemented using the `tokio`+`parking_lot` library.
+tokio = { version = "1.21.0", optional = true, default-features = false, features = ["parking_lot", "sync"]}
+async-trait = { version = "0.1.57", optional = true }
