--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2024"
 license = "Apache-2.0"
 readme = "README.md"
 
-description = "Convenient and simple macro for code synchronization in multithreading."
-keywords = ["easy_sync_code", "synchronized", "no_std", "clucompany"]
+description = "Simple and convenient macro for synchronizing code in multithreading"
+keywords = ["sync_code", "async_code", "synchronized", "no_std", "clucompany"]
 categories = ["concurrency", "no-std"]
 
 # docs.rs-specific configuration
